--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div className='month'>march</div>
             </div>
             <figure>
-                <img src="cardInfo.imageURL" alt="" />
+                <img src={cardInfo.imageURL} alt="" />
             </figure>
             <div className='content'>
                 <h1>{cardInfo.title}</h1>
